--- a/graphql_app/package.json
+++ b/graphql_app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
